# drake

./: .gitignore  AGENTS.md  AGGREGATION_DESIGN.md  BENCHMARK_RESULTS.txt  CMakeLists.txt  GAP_ANALYSIS.md  Makefile  ORG_BABEL_GUIDE.md  PALETTE_BROWSER.md  PALETTE_BROWSER_QUICKSTART.md  README.md  RUST_EXPLORATION.md  THEMING.md  TODO.md  bugs.md  drake-duckdb.el  drake-gnuplot.el  drake-palette-browser.el  drake-rust.el  drake-spec.md  drake-svg.el  drake-theme.el  drake.el  ob-drake.el
.github/scripts/: test-local.sh
.github/workflows/: ci.yml
docs/: GALLERY.md  IMPLEMENTATION_SUMMARY.md  MATH_OFFLOAD_ANALYSIS.md  MATH_OFFLOAD_IMPLEMENTATION.md  ORG_BABEL_GUIDE.md  ORG_INTEGRATION.md  PALETTE_BROWSER_QUICKSTART.md
examples/: generate-images.el  iris-pair.el  iris-scatter.el  org-babel-demo.org  palette-demo.el  performance-bench.el  stage2-demo.el  theme-demo.el  tips-count.el  tips-regression.el  tips-scatter.el
rust/: Cargo.toml
rust/src/: lib.rs
tests/: advanced-axis-tests.el  advanced-facet-tests.el  axis-tests.el  bench-math-offload.el  benchmarks.el  color-tests.el  count-plot-tests.el  drake-duckdb-tests.el  drake-gnuplot-tests.el  drake-rust-tests.el  drake-svg-tests.el  drake-tests.el  duckdb-drake-tests.el  facet-tests.el  gnuplot-facet-test.el  legend-tests.el  ob-drake-tests.el  pair-plot-tests.el  palette-browser-tests.el  rust-facet-test.el  rust-fallback-tests.el  rust-math-tests.el  rust-module-tests.el  stage3-tests.el  stage4-tests.el  test-helper.el  theme-tests.el  uncertainty-tests.el  violin-gnuplot-test.el
