[package]
name = "drake-rust-module"
version = "0.1.0"
edition = "2021"

[lib]
name = "drake_rust_module"
crate-type = ["cdylib"]

[dependencies]
emacs = "0.19"
plotters = { version = "0.3.5", default-features = false, features = ["svg_backend", "line_series", "point_series", "boxplot"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
